--- a/Arbitrage-Lab/__main__.tex
+++ b/Arbitrage-Lab/__main__.tex
@@ -18,7 +18,7 @@ Pairs-Trading a Sparse Synthetic Control
 Jesus Villota Miranda}$^{\dagger}$
 \footnote{
 \scriptsize{
-%%I am deeply grateful to [...].
+I am deeply grateful to Enrique Sentana, Rafael Repullo, Maria Teresa Gonzalez-Perez and participants at the CEMFI Banking \& Finance Seminar Series for their feedback.
 %% This paper is intended for academic purposes only and does not constitute financial advice. The strategies and methodologies discussed involve risks, including the potential loss of capital. Past performance is not indicative of future results, and the authors assume no liability for decisions made by individuals or entities based on the content of this research. 
 %%Finally, 
 I gratefully acknowledge financial support from the Santander Research Chair at CEMFI.
