--- a/Arbitrage-Lab/bib_references_DOI.bib
+++ b/Arbitrage-Lab/bib_references_DOI.bib
@@ -582,3 +582,12 @@
   month = jun,
   pages = {33-52}
 }
+
+@book{Nelsen2006,
+  title={An introduction to copulas},
+  author={Nelsen, Roger B},
+  year={2006},
+  publisher={Springer},
+  url = {http://dx.doi.org/10.1007/0-387-28678-0},
+  DOI = {10.1007/0-387-28678-0}
+}
